# Scrappers

./: .env.example  .gitignore  Dockerfile  README.md  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt  start.sh
app/: __init__.py  config.py  database.py  main.py
app/models/: __init__.py  product.py
app/scrapers/: __init__.py  base.py  carrefour.py  mercadona.py
app/services/: __init__.py  scraper_service.py
scripts/: run_scrapers.py
tests/: __init__.py
